################################################################################
#
# File:    Makefile.am
# Project: OpenSonATA
# Authors: The OpenSonATA code is the result of many programmers
#          over many years
#
# Copyright 2011 The SETI Institute
#
# OpenSonATA is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# OpenSonATA is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with OpenSonATA.  If not, see<http://www.gnu.org/licenses/>.
# 
# Implementers of this code are requested to include the caption
# "Licensed through SETI" with a link to setiQuest.org.
# 
# For alternate licensing arrangements, please contact
# The SETI Institute at www.seti.org or setiquest.org. 
#
################################################################################


# Setup files (masks, config, files, etc.) that
# get installed in the setup directory during an install

setupdir = $(prefix)/setup/

# this creates the setup directory
setup_DATA =

dist_setup_DATA = \
	birdieMaskIfc1.tcl \
	birdieMaskIfc2.tcl \
	birdieMaskIfc3.tcl \
	rcvrBirdieMask.tcl \
	permRfiMask.tcl \
	testMask.tcl \
	ifc1.cfg \
	ifc2.cfg \
	ifc3.cfg \
	tsig1_lab.cfg \
	tsig2_lab.cfg \
	tsig3_lab.cfg \
	tsig1_field.cfg \
	tsig2_field.cfg \
	tsig3_field.cfg \
	simulator_ifc1.cfg \
	simulator_ifc2.cfg \
	simulator_ifc3.cfg \
	simulator_tsig1.cfg \
	simulator_tsig2.cfg \
	simulator_tsig3.cfg \
	simulator_expectedNssComponents.cfg \
	standardExpectedSonATAComponents.cfg \
	expected3beamSonATAComponents.cfg \
	expectedSonATAComponents-1beam-800KHz-1dx.cfg \
	expectedSonATAComponents-1beam-800KHz-24dx.cfg \
	expectedSonATAComponents-24dxs.cfg \
	expectedSonATAComponents-2beam-800KHz-48dx.cfg \
	expectedSonATAComponents-2beam-data-collect-2dx.cfg \
	expectedSonATAComponents-36dxs.cfg \
	expectedSonATAComponents-3beam-800KHz-72dx.cfg \
	expectedSonATAComponents-48dxs.cfg \
	expectedSonATAComponents-546KHz-12dx.cfg \
	expectedSonATAComponents-96dxs.cfg \
	expectedSonATAComponents-beam2-800KHz-24dx.cfg \
	expectedSonATAComponents-jane-test.cfg \
	earth.xyz \
	pioneer10.xyz \
	voyager1.xyz \
	moon.xyz \
	venus.xyz \
	mars.xyz \
	jupiter.xyz \
	saturn.xyz \
	rosetta.xyz \
	newhorizons.xyz \
	dawn.xyz \
	deepimpact.xyz \
	stardust.xyz \
	phoenixlander.xyz \
	ulysses.xyz \
	cassini.xyz \
	kepler.xyz \
	ifAttnDbOffset.cfg





